--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/SchoolToHomeBehaviorTracking_Client.csproj
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/SchoolToHomeBehaviorTracking_Client.csproj
@@ -306,16 +306,14 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SchoolToHomeBehaviorTracking_Interface\SchoolToHomeBehaviorTracking_Interface.csproj">
       <Project>{039DB83E-67E4-455D-9738-06BB07C6D953}</Project>
       <Name>SchoolToHomeBehaviorTracking_Interface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SchoolToHomeBehaviorTracking_Server\SchoolToHomeBehaviorTracking_Server.csproj">
-      <Project>{CD72B86C-6D06-4C02-A50D-DA0F959ECBC9}</Project>
-      <Name>SchoolToHomeBehaviorTracking_Server</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
